[package]
name = "jolly-chip8-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
imgui-sdl2-support = "0.11.0"
imgui = "0.11.0"
sdl2 = "0.34.5"
glow = "0.12.0"
imgui-glow-renderer = "0.11.0"
rfd = "0.11.4"
rand = "0.8.5"
